--- a/ERPWeb/Views/AgroConfiguration/FGProductAccept.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/FGProductAccept.cshtml
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <button type="button" class="btn btn-outline-danger btn-sm float-right" data-dismiss="modal" data-target="#"><i class="fas fa-paper-plane"></i> Cancel </button>
-                <button type="submit" class="btn btn-outline-success btn-sm float-right" id="Accept"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextZone">Appreved</span> </button>
+                <button type="submit" class="btn btn-outline-success btn-sm float-right" id="Accept"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextZone">Save</span> </button>
             </div>
         </div>
     </div>
