--- a/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
@@ -86,9 +86,9 @@
 
 
 <div class="modal fade" id="AgroSalesProductDetails" role="dialog" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
-            <div class="modal-header alert-secondary">
+            <div class="modal-header bg-gradient-gray-dark">
                 <h4 id="modalHeading" class="modal-title">Agro Sales Product Details</h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
