--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductDetails.cshtml
@@ -6,73 +6,72 @@
     var info = (ERPBO.Agriculture.ViewModels.AgroProductSalesInfoViewModel)ViewBag.Info;
 }
 
+
+
 <table class="table table-bordered table-striped table-sm table-responsive-lg text-sm">
     @if (info != null)
     {
-    <tr style="width:100%">
-        <td style="width:5%">Date</td>
-        <td style="width:10%"><b>@info.InvoiceDate.Value.ToShortDateString()</b></td>
+        <tr style="width: 100%; background-color: #FFFFE0 ">
+            <td style="width:10%">Date</td>
+            <td style="width:17%"><b>@info.InvoiceDate.Value.ToShortDateString()</b></td>
 
-        <td style="width:5%">Invoice No</td>
-        <td style="width:10%"><b>@info.InvoiceNo</b></td>
+            <td style="width:10%">Invoice No</td>
+            <td style="width:25%"><b>@info.InvoiceNo</b></td>
 
-        <td style="width:5%">ChallanNo No</td>
-        <td style="width:10%"><b>@info.ChallanNo</b></td>
-
-        <td style="width:5%">Driver Name</td>
-        <td style="width:10%"><b>@info.DriverName</b></td>
-
-        <td style="width:5%">Vehicle Number</td>
-        <td style="width:10%"><b>@info.VehicleNumber</b></td>
-
-        <td style="width:5%">Delivery Place</td>
-        <td style="width:10%"><b>@info.DeliveryPlace</b></td>
-
-        @*<td style="width:13%">Zone Name</td>
-        <td style="width:15%"><b>@info.ZoneName</b></td>
-
-        <td style="width:13%">Division Name</td>
-        <td style="width:15%"><b>@info.DivisionName</b></td>
-
-        <td style="width:13%">Region Name</td>
-        <td style="width:15%"><b>@info.RegionName</b></td>
-
-        <td style="width:13%">Area Name</td>
-        <td style="width:15%"><b>@info.AreaName</b></td>
-
-        <td style="width:13%">Territory Name</td>
-        <td style="width:15%"><b>@info.TerritoryName</b></td>
-
-        <td style="width:13%">Stockiest Name</td>
-        <td style="width:20%"><b>@info.StockiestName</b></td>*@
-
-        @**@
+            <td style="width:13%">ChallanNo No</td>
+            <td style="width:25%"><b>@info.ChallanNo</b></td>
+            <td class="hide"><b>@info.StockiestId</b></td>
+        </tr>
 
 
-        <td style="width:20%" class="hide"><b>@info.StockiestId</b></td>
-    </tr>
-    <tr style="width:100%">
-        <td style="width:13%">Zone Name</td>
-        <td style="width:15%"><b>@info.ZoneName</b></td>
-
-        <td style="width:13%">Division Name</td>
-        <td style="width:15%"><b>@info.DivisionName</b></td>
-
-        <td style="width:13%">Region Name</td>
-        <td style="width:15%"><b>@info.RegionName</b></td>
-
-        <td style="width:13%">Area Name</td>
-        <td style="width:15%"><b>@info.AreaName</b></td>
-
-        <td style="width:13%">Territory Name</td>
-        <td style="width:15%"><b>@info.TerritoryName</b></td>
-
-        <td style="width:13%">Stockiest Name</td>
-        <td style="width:20%"><b>@info.StockiestName</b></td>
-    </tr>
     }
 </table>
-<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm" id="tblReturnItems">
+<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm" style="margin-top:-15px;">
+    @if (info != null)
+    {
+
+        <tr style="width: 100%; background-color: #FFFFE0 ">
+            <td style="width:15%">Driver Name</td>
+            <td style="width:20%"><b>@info.DriverName</b></td>
+
+            <td style="width:15%">Vehicle Number</td>
+            <td style="width:15%"><b>@info.VehicleNumber</b></td>
+
+            <td style="width:15%">Delivery Place</td>
+            <td style="width:15%"><b>@info.DeliveryPlace</b></td>
+
+            <td class="hide"><b>@info.StockiestId</b></td>
+        </tr>
+
+    }
+</table>
+<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm" style="margin-top:-15px;">
+    @if (info != null)
+    {
+
+        <tr style="width: 100%; background-color: #B0C4DE ">
+            <td style="width:7%">Stockiest</td>
+            <td style="width:10%"><b>@info.StockiestName</b></td>
+
+            <td style="width:7%">Territory</td>
+            <td style="width:10%"><b>@info.TerritoryName</b></td>
+
+            <td style="width:6%">Area</td>
+            <td style="width:10%"><b>@info.AreaName</b></td>
+
+            <td style="width:7%">Region</td>
+            <td style="width:10%"><b>@info.RegionName</b></td>
+
+            <td style="width:7%">Division</td>
+            <td style="width:10%"><b>@info.DivisionName</b></td>
+
+            <td style="width:6%">Zone</td>
+            <td style="width:10%"><b>@info.ZoneName</b></td>
+
+        </tr>
+    }
+</table>
+<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm " id="tblReturnItems">
     <thead class="thead-dark">
         <tr class="text-center">
             <th>#SL</th>
@@ -80,7 +79,8 @@
             <th>MeasurementSize</th>
             <th>Quantity</th>
             <th>Price</th>
-            <th>Discount</th>
+            <th>Discount%</th>
+            <th>Total</th>
             @*<th>Total</th>*@
         </tr>
     </thead>
@@ -88,16 +88,38 @@
         @foreach (var item in Model)
         {
             sl = sl + 1;
-            <tr>
-                <td class="text-center">@sl</td>
-                <td class="text-center">@item.FinishGoodProductName</td>
-                <td class="text-center">@item.MeasurementSize</td>
-                <td class="text-center">@item.Quanity</td>
-                <td class="text-center text-bold">@item.Price</td>
-                <td class="text-center">@item.Discount</td>
-                @*<td class="hide">@item</td>*@
 
-            </tr>
+            if (item.RT == 1)
+            {
+                <tr style="background-color: #008B8B; text">
+                    <td class="text-center">@sl</td>
+                    <td class="text-center">@item.FinishGoodProductName</td>
+                    <td class="text-center">@item.MeasurementSize</td>
+                    <td class="text-center">@item.Quanity</td>
+                    <td class="text-center text-bold">@item.Price</td>
+                    <td class="text-center">@item.Discount</td>
+                    <td class="text-center">@item.ProductTotal</td>
+                    @*<td class="hide">@item</td>*@
+
+                </tr>
+
+            }
+            else
+            {
+                <tr >
+                    <td class="text-center">@sl</td>
+                    <td class="text-center">@item.FinishGoodProductName</td>
+                    <td class="text-center">@item.MeasurementSize</td>
+                    <td class="text-center">@item.Quanity</td>
+                    <td class="text-center text-bold">@item.Price</td>
+                    <td class="text-center">@item.Discount</td>
+                    <td class="text-center">@item.ProductTotal</td>
+                    @*<td class="hide">@item</td>*@
+
+                </tr>
+
+            }
+
         }
     </tbody>
 </table>
