--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -61,9 +61,9 @@
                         <div class="row small ">
                             <div class="col-md-2">
                                 <label for="ddlClient" class="col-form-label pt-0">
-                                    Client Name
+                                    Stockiest Name
                                 </label>
-                                @Html.DropDownList("ddlClientName", (IEnumerable<SelectListItem>)ViewBag.ddlClientName, "--ClientName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                @Html.DropDownList("ddlClientName", (IEnumerable<SelectListItem>)ViewBag.ddlClientName, "--Stockiest Name--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                 <span class="error hide req-ClientName font-weight-bold">Client Name is required!</span>
                             </div>
                             <div class="col-md-2">
