--- a/ERPWeb/Views/AgroConfiguration/CreateStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateStockiestList.cshtml
@@ -338,7 +338,7 @@
                     TerritoryId: tds.eq(16).html(),
                     AreaId: tds.eq(15).html(),
                     StockiestName: tds.eq(3).html(),
-                    StockiestPhoneNumber: tds.eq(5).html(),
+                    StockiestPhoneNumber: tds.eq(6).html(),
                     StockiestMail: tds.eq(9).html(),
                     StockiestTradeLicense: tds.eq(10).html(),
                     StockiestNID: tds.eq(11).html(),
@@ -346,7 +346,8 @@
                     StockiestContactPersonPHNumber: tds.eq(13).html(),
                     CreditLimit: tds.eq(14).html(),
                     Status: tds.eq(7).html(),
-                    StockiestAddress: tds.eq(4).html(),
+                    StockiestAddress: tds.eq(5).html(),
+                    StockiestCode: tds.eq(4).html(),
 
                 });
             })
