--- a/ERPWeb/Views/AgroConfiguration/CreateStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateStockiestList.cshtml
@@ -63,6 +63,7 @@
                 <div class="col-md-2">
                     <label for="txtStockiestCode" class="control-label">Stockiest Code <span style="color:red">*</span></label>
                     <input type="text" id="txtStockiestCode" class="form-control form-control-sm" />
+                    @*<input type="text" id="txt_usrid" class="form-control form-control-sm" />*@
                     <span class="error hide required-txtStockiestCode font-weight-bold">Input Stockiest Code!</span>
 
                 </div>
@@ -112,7 +113,7 @@
                 </div>
                 <div class="col-md-1">
                     <label for="ddlcreditlimit" class="control-label">Status <span style="color:red">*</span></label>
-                    <select id="ddlcreditlimit" class="form-control form-control-sm select2" >
+                    <select id="ddlcreditlimit" class="form-control form-control-sm select2">
                         <option value="0">Select</option>
                         <option value="Active">Active</option>
                         <option value="InActive">InActive</option>
@@ -170,12 +171,13 @@
 
 @section scripts{
 
-<script type="text/javascript">
+    <script type="text/javascript">
 
         var ddlOrganizationName = $("#ddlOrganizationName");
         var ddlTerritoryName = $("#ddlTerritoryName");
         var txtStockiestName = $("#txtStockiestName");
-        var txtStockiestCode = $("#txtStockiestCode");
+    //var txtStockiestCode = $("#txtStockiestCode");
+        var txtStockiestCode = $("#txt_usrid");
         var txtStockiestAddress = $("#txtStockiestAddress");
         var ddlareaname = $("#ddlareaname");
         var ddlcreditlimit = $("#ddlcreditlimit");
@@ -455,5 +457,5 @@
             numclamountin.val("");
 
         }
-</script>
+    </script>
 }
